Refactored resumeButton.js to be more generic, and changing it's name to windowControls. Also fixed monitor overlapping with taskbar

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,7 +22,7 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  height: calc(100vh - 30px);
+  height: calc(100vh - 50px);
   position: relative;
   z-index: 1;
 }
